--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ body {
 	color: #777777;
 	line-height: 2;
 	margin-bottom: 30px;
+	float: left;
 }
 
 /*Contact(only on contact.html)===========*/
@@ -92,11 +93,6 @@ body {
 	color: #777777;
 	padding-left: 5px;
 	font-weight: normal;
-}
-
-button {
-	margin-left: 30px;
-	margin-top: -40px;
 }
 
 #submit-button {
